Fixed home page content shifting down occasionally on page load. Cause: height of hero surrounding div is determined by the hero image itself, before any image loads the hero wrapper has no height and the elements below are up heigher. Fix: Included a smaller low-res image to be loaded initially and gave the hero image a minimum height before load.

--- a/src/styles/modules/_site-body.scss
+++ b/src/styles/modules/_site-body.scss
@@ -57,7 +57,18 @@
 
 
   &__hero {
+    /*structure*/
     width: 100%;
+    /*colors*/
+    background-color: $color_neutralDark;
+
+    &:not(.lazyloaded) {
+      min-height: 150px;
+
+      @include atSmall {
+        min-height: 300px;
+      }
+    }
   }
 
   /**************************************/
